# disco-bot-manager

./: .gitignore  Cargo.toml  README.md
scripts/: bundle.ps1  bundle.sh
src/: bot.rs  config.rs  gui.rs  main.rs  sources.rs  state.rs
